--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -140,6 +140,17 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatButton>
 
+                <TextView
+                    android:id="@+id/tv_Current_Year_Experiance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Current Year Expense Report"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    ></TextView>
+
+
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/SelectDateTime"
                     android:layout_width="30dp"
@@ -147,7 +158,7 @@
                     android:gravity="center_horizontal"
                     android:background="@drawable/ic_search_expense"
                     tools:layout_editor_absoluteX="188dp"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_Current_Year_Experiance"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/addExpenseBtn"></androidx.appcompat.widget.AppCompatButton>
@@ -197,13 +208,14 @@
                 android:id="@+id/itemsswipetorefresh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_below="@id/MonthlyWiseSaleReportHeadTitle">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/ExpenseDetail_RV"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/MonthlyWiseSaleReportHeadTitle"></androidx.recyclerview.widget.RecyclerView>
+                android:layout_below="@id/MonthlyWiseSaleReportHeadTitle"
+                android:layout_weight="1">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/ExpenseDetail_RV"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/MonthlyWiseSaleReportHeadTitle"></androidx.recyclerview.widget.RecyclerView>
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
