--- a/app/src/main/res/layout/custom_dialog_add_expense.xml
+++ b/app/src/main/res/layout/custom_dialog_add_expense.xml
@@ -22,6 +22,7 @@
         android:hint="Enter amount..."
         android:layout_marginLeft="5dp"
         android:layout_marginTop="20dp"
+        android:inputType="number"
         ></EditText>
     <EditText
         android:id="@+id/et_descrioptionExpense"
