--- a/app/src/main/res/layout/order_detail_items.xml
+++ b/app/src/main/res/layout/order_detail_items.xml
@@ -73,6 +73,18 @@
         app:layout_constraintLeft_toRightOf="@id/itemSize"
         app:layout_constraintTop_toTopOf="parent"></TextView>
 
+    <TextView
+        android:id="@+id/ItemTotalQuantity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="5dp"
+        android:text="Price"
+        android:textColor="@color/LightBlack"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toRightOf="@id/ItemPrice"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
+
 
     <View
         android:id="@+id/horizentalLine"
